--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     //implementation 'com.google.android.gms:play-services-ads:12.0.1'
     implementation 'com.google.android.gms:play-services-ads:17.1.1'
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1-alpha01'
